<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".movie.moviedetail.ui.MovieDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginStart="@dimen/margin_48dp"
            app:expandedTitleMarginEnd="@dimen/margin_64dp">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:src="@color/colorImagePlaceholder"
                android:contentDescription="@string/backdrop_image" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_marginRight="@dimen/margin_24dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:orientation="horizontal">

                <ImageView
                    android:src="@color/colorImagePlaceholder"
                    android:id="@+id/poster_image"
                    android:adjustViewBounds="true"
                    android:transitionName="movieImage"
                    android:layout_width="@dimen/margin_132dp"
                    android:minWidth="@dimen/margin_132dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/poster_image"
                    tools:targetApi="lollipop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_16dp"
                        android:textColor="@android:color/black"
                        android:id="@+id/text_title"
                        android:textSize="@dimen/text_sz_24sp"
                        tools:text="Forrest Gump"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_sz_16sp"
                        android:id="@+id/text_release_date"
                        tools:text="Release date: "/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:background="@color/colorImagePlaceholder"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/user_rating" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:tint="@color/colorPrimary"
                            android:src="@drawable/octagon"
                            android:contentDescription="@string/image_user_rating"
                            tools:targetApi="lollipop" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/text_rating"
                            android:textStyle="bold"
                            android:textColor="@android:color/white"
                            android:layout_gravity="center"
                            tools:text="6.8"/>

                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_vote_count"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        tools:text="1000"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:background="@color/colorImagePlaceholder"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Synopsis"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:gravity="center"
                android:textSize="@dimen/text_sz_16sp"
                android:id="@+id/text_synopsis"
                android:lineSpacingExtra="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:background="@color/colorImagePlaceholder"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:textSize="@dimen/text_sz_20sp"
                android:text="@string/trailers" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerview_trailer"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:background="@color/colorImagePlaceholder"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:textSize="@dimen/text_sz_20sp"
                android:text="@string/reviews" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recyclerview_review"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_label_no_review"
                    android:visibility="gone"
                    android:paddingBottom="@dimen/margin_16dp"
                    android:layout_gravity="center"
                    android:text="@string/no_review"/>

            </FrameLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/fab_favorite"
        android:layout_margin="@dimen/margin_16dp"
        android:src="@drawable/ic_add_white_48dp"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>